cmake_minimum_required(VERSION 3.19)
project(CppLearning)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppLearning
        CppPrimer/lib/Sales_data.h
        WangDao/Chap02/Figure2.1/SeqList.h
        WangDao/Chap02/Figure2.1/SeqList.cpp
        LeetCode/Q2699/Q2600/Solution.cpp LeetCode/Q0199/Q0167/Solution.cpp LeetCode/Q0099/Q0015/Solution.cpp LeetCode/Q0899/Q0860/Solution.cpp LeetCode/Q0099/Q0042/Solution.cpp LeetCode/Q0099/Q0077/Solution.cpp LeetCode/Q0899/Q0822/Solution.cpp LeetCode/Q0799/Q0722/Solution.cpp LeetCode/Q0099/Q0017/Solution.cpp LeetCode/Q0199/Q0139/Solution.cpp LeetCode/Q0099/Q0074/Solution.cpp LeetCode/Q0099/Q0081/Solution.cpp LeetCode/Q1599/Q1572/Solution.cpp LeetCode/Q0599/Q0518/Solution.cpp LeetCode/Q0099/Q0006/Solution.cpp LeetCode/Q0099/Q0007/Solution.cpp LeetCode/Q0099/Q0008/Solution.cpp LeetCode/Q0099/Q0009/Solution.cpp LeetCode/Q0099/Q0010/Solution.cpp)
