cmake_minimum_required(VERSION 3.19)
project(CppLearning)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppLearning
        LeetCode/DataStructure/TreeNode.h
        LeetCode/Q0099/Q0040/Solution.cpp
        LeetCode/Q2699/Q2661/Solution.cpp
        LeetCode/Q0099/Q0041/Solution.cpp
        LeetCode/Q0099/Q0043/Solution.cpp
        LeetCode/Q0099/Q0044/Solution.cpp
        LeetCode/Q0099/Q0045/Solution.cpp
        LeetCode/Q0099/Q0046/Solution.cpp
        LeetCode/Q0099/Q0047/Solution.cpp
        LeetCode/Q0099/Q0048/Solution.cpp
        LeetCode/Q0099/Q0049/Solution.cpp
        LeetCode/Q1099/Q1094/Solution.cpp
        LeetCode/Q0099/Q0050/solution1/Solution.cpp
        LeetCode/Q0099/Q0050/solution2/Solution.cpp
)
